--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -2,9 +2,9 @@ name: Ruby Gem
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "sendoso-main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "sendoso-main" ]
 
 jobs:
   build:
@@ -17,9 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up Ruby 3.1
-      uses: actions/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 3.1.0
+        ruby-version: 3.1
+        bundler-cache: true
 
     - name: Publish to GPR
       run: |
